# dreambar-crm

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  pyproject.toml
backend/: .dockerignore  .gitignore  Dockerfile  entrypoint.sh  manage.py  pyproject.toml  requirements.txt
backend/apps/analytics/: urls.py  views.py
backend/apps/audit/: admin.py  apps.py  idempotency.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/exports/: urls.py  views.py
backend/apps/inventory/: admin.py  codeqr.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
backend/apps/menu/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/orders/: admin.py  models.py  serializers.py  tests.py  tests_concurrency.py  tests_deposit.py  urls.py  views.py
backend/apps/printers/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/receipts/: admin.py  apps.py  models.py
backend/apps/reservations/: models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/shifts/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/system/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/tables/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
backend/apps/tickets/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/users/: admin.py  models.py  permissions_matrix.py  (+3 more)
backend/dreambar/: pagination.py  urls.py  wsgi.py
(+265 files in other folders)
