[tool.poetry]
name = "dreambar-backend"
version = "0.1.0"
description = "DreamBar — backend API"
authors = ["tta <tta@biznpro.ru>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
Django = "5.1.4"
djangorestframework = "3.15.2"
django-cors-headers = "4.6.0"
djangorestframework-simplejwt = "5.3.1"
openpyxl = "3.1.5"
django-filter = "24.3"
Pillow = "11.1.0"
gunicorn = "23.0.0"
psycopg2-binary = "2.9.10"
whitenoise = "6.8.2"
python-dotenv = "1.0.1"

[tool.poetry.group.dev.dependencies]
ipython = "*"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
